@@ -480,6 +480,7 @@ extern struct Battle_Config
 	int autospell_check_range;	//Enable range check for autospell bonus. [L0ne_W0lf]
 	int client_reshuffle_dice;  // Reshuffle /dice
 	int client_sort_storage;
+	int gm_check_minlevel;  // min GM level for /check
 
 	// [BattleGround Settings]
 	int bg_update_interval;
